# gpumatting

./: BandedMatrix.cu  BandedMatrix.h  CMakeLists.txt  COPYRIGHT  CompressedMatrix.cu  CompressedMatrix.h  CoordMatrix.cu  CoordMatrix.h  Matting.cu  README  README.md  SLIC.cpp  SLIC.h  Solve.cpp  Solve.h  Vector.cu  gridoperators.h  main.cu  matmul.cu  ppm.h
data/: 05.ppm  05_gt.pgm  05_scribs.pgm
gpulib/: CMakeLists.txt  CompressedMatrix.cu  CompressedMatrix.h  CoordMatrix.cu  CoordMatrix.h  Vector.cu  Vector.h
gpulib/tests/: CMakeLists.txt  CompressedMatrixTest.cu  VectorTest.cu
matlab/: getLevinLap.m  getLevinLapRaster.m  laplacianFromBmDump.m
tests/: BandedMatrixTest.cu  CMakeLists.txt  CompressedMatrixTest.cu  VectorTest.cu
